--- a/style.css
+++ b/style.css
@@ -10,25 +10,30 @@
   padding: 0;
   margin: 0;
   font-size: 16px;
-  border: solid 1px blue;
 }
 
 .container {
   display: grid;
-  grid-template: 1fr 4fr / 1fr 4fr;
+  grid-template: 180px 1fr / 300px 1fr;
 }
 
 .header {
   grid-area: 1/2/2/3;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2), 0 4px 20px rgba(0, 0, 0, 0.19);
+  z-index: 1;
 }
 
 .sidebar {
   grid-area: 1/1/3/2;
   height: 100vh;
   overflow: auto;
+  background-color: #1992d4;
+  box-shadow: 2px 0 4px rgba(0, 0, 0, 0.2), 4px 0 10px rgba(0, 0, 0, 0.19);
+  z-index: 2;
 }
 
 .content {
   grid-area: 2/2/3/3;
   overflow: auto;
+  background-color: #e2e8f0;
 }
