--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   padding: 0;
   margin: 0;
   font-size: 16px;
+  list-style: none;
 }
 
 .container {
@@ -30,6 +31,25 @@
   background-color: #1992d4;
   box-shadow: 2px 0 4px rgba(0, 0, 0, 0.2), 4px 0 10px rgba(0, 0, 0, 0.19);
   z-index: 2;
+  padding: 24px;
+  color: white;
+  font-weight: 700;
+}
+
+.title {
+  font-size: 2rem;
+}
+
+.sidebar li {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  font-size: 1.5rem;
+}
+
+.sidebar img {
+  filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(7454%) hue-rotate(268deg) brightness(118%) contrast(101%);
+  height: 1.5rem;
 }
 
 .content {
