--- a/style.css
+++ b/style.css
@@ -15,17 +15,18 @@
 
 .container {
   display: grid;
-  grid-template: 180px 1fr / 280px 1fr;
+  grid-template: 180px 1fr / 70px 210px 1fr;
+  position: relative;
 }
 
 .header {
-  grid-area: 1/2/2/3;
+  grid-area: 1/3/2/4;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2), 0 4px 20px rgba(0, 0, 0, 0.19);
   z-index: 1;
 }
 
 .sidebar {
-  grid-area: 1/1/3/2;
+  grid-area: 1/1/3/3;
   height: 100vh;
   overflow: auto;
   background-color: #1992d4;
@@ -37,6 +38,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+.sidebar:hover {
+  grid-area: 1/1/3/3;
 }
 
 .navigation {
@@ -54,14 +59,18 @@
 .sidebar li {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 24px;
   font-size: 1.5rem;
   margin-top: min(24px, 4vh);
+  width: fit-content;
+  transition: .3s;
 }
 
 .sidebar li:hover {
   transform: translateX(8px);
+  transition: .3s;
   cursor: pointer;
+  text-shadow: 0 3px 10px rgba(0, 0, 0, 0.5), 0 6px 20px rgba(0, 0, 0, 0.5);
 }
 
 li p {
@@ -82,7 +91,7 @@ li img {
 }
 
 .content {
-  grid-area: 2/2/3/3;
+  grid-area: 2/3/3/4;
   overflow: auto;
   background-color: #e2e8f0;
 }
