--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
   display: flex;
   align-items: center;
   gap: 16px;
-  margin-bottom: 72px;
+  margin-bottom: min(72px, 14vh);
 }
 
 .sidebar li {
@@ -61,7 +61,7 @@
   align-items: center;
   gap: 24px;
   font-size: 1.5rem;
-  margin-top: min(24px, 4vh);
+  margin-top: min(24px, 3.5vh);
   width: fit-content;
   transition: .3s;
 }
