--- a/style.css
+++ b/style.css
@@ -23,6 +23,40 @@
   grid-area: 1/2/2/4;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2), 0 4px 20px rgba(0, 0, 0, 0.19);
   z-index: 1;
+  display: grid;
+  grid-template: 65px 115px / 2fr 1fr;
+}
+
+.search {
+  grid-area: 1/1/2/2;
+  padding: 10px 48px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 24px;
+}
+
+.header input {
+  flex-grow: 1;
+  padding: 4px;
+}
+
+.header label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-icons {
+  grid-area: 1/2/2/3;
+}
+
+.user-info {
+  grid-area: 2/1/3/2;
+}
+
+.user-buttons {
+  grid-area: 2/2/3/3;
 }
 
 .sidebar {
