--- a/style.css
+++ b/style.css
@@ -38,13 +38,22 @@
 
 .header input {
   flex-grow: 1;
-  padding: 4px;
+  padding: 8px;
+  padding-left: 12px;
+  border: none;
+  background-color: rgba(111, 137, 151, 0.2);
+  border-radius: 16px;
+  font-size: 1.2rem;
 }
 
 .header label {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+label img {
+  height: 28px;
 }
 
 .profile-icons {
