Add styling to user-info div in header

--- a/style.css
+++ b/style.css
@@ -89,11 +89,28 @@ label img {
 
 .profile-icons p {
   font-size: 1.2rem;
-  font-weight: 700;
 }
 
 .user-info {
   grid-area: 2/1/3/2;
+  padding: 10px 48px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 24px;
+}
+
+#user-avatar {
+  height: 84px;
+}
+
+.welcome {
+  margin-bottom: 8px;
+}
+
+.user-name {
+  font-size: 1.7rem;
+  font-weight: 700;
 }
 
 .user-buttons {
