--- a/style.css
+++ b/style.css
@@ -207,8 +207,8 @@ label img {
 }
 
 .sidebar li:hover {
-  transform: translateX(8px);
-  transition: .15s;
+  gap: 32px;
+  transition: .3s;
   cursor: pointer;
   text-shadow: 0 3px 10px rgba(0, 0, 0, 0.5), 0 6px 20px rgba(0, 0, 0, 0.5);
 }
