--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@
   font-size: 1.2rem;
 }
 
+.search input:hover {
+  background-color: rgba(111, 137, 151, 0.35);
+}
+
 .search input:focus {
   background-color: white;
   outline: none;
