--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
   display: grid;
   grid-template: 180px 1fr / 70px 210px 1fr;
   position: relative;
+  overflow-x: hidden;
 }
 
 .header {
@@ -240,8 +241,43 @@ li img {
 
 .content {
   grid-area: 2/2/3/4;
-  overflow: auto;
+  height: calc(100vh - 180px);
+  overflow-y: auto;
+  overflow-x: hidden;
   background-color: #e2e8f0;
+  display: grid;
+  grid-template: 80px 1fr / 2.5fr 1fr;
+}
+
+.projects-label {
+  grid-area: 1/1/2/2;
+  padding: 12px 24px;
+  display: flex;
+  justify-content: start;
+  align-items: end;
+}
+
+.projects {
+  grid-area: 2/1/3/2;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-auto-rows: 200px;
+}
+
+.projects-item {
+  background-color: white;
+}
+
+.content-side {
+  grid-area: 1/2/3/3;
+}
+
+.announcements-label,
+.trending-label,
+.projects-label {
+  font-size: 1.4rem;
+  font-weight: 700;
+  letter-spacing: .02rem;
 }
 
 @keyframes shake {
