--- a/style.css
+++ b/style.css
@@ -261,11 +261,36 @@ li img {
   grid-area: 2/1/3/2;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  grid-auto-rows: 200px;
+  grid-auto-rows: 250px;
+  gap: 24px;
+  padding: 12px 24px;
 }
 
 .projects-item {
   background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 36px;
+  border-radius: 12px;
+}
+
+.project-text {
+  overflow: hidden;
+}
+
+.project-name {
+  cursor: pointer;
+}
+
+.project-icons {
+  display: flex;
+  justify-content: end;
+  gap: 24px;
+}
+
+.project-icons img {
+  cursor: pointer;
 }
 
 .content-side {
@@ -274,7 +299,8 @@ li img {
 
 .announcements-label,
 .trending-label,
-.projects-label {
+.projects-label,
+.project-name {
   font-size: 1.4rem;
   font-weight: 700;
   letter-spacing: .02rem;
