--- a/style.css
+++ b/style.css
@@ -212,9 +212,14 @@ label img {
   transition: .15s;
 }
 
-.sidebar li:hover,
-.title:hover {
+.sidebar li:hover {
   transform: scale(1.08);
+  transition: .15s;
+  cursor: pointer;
+  text-shadow: 0 3px 10px rgba(0, 0, 0, 0.5), 0 6px 20px rgba(0, 0, 0, 0.5);
+}
+
+.title:hover {
   transition: .15s;
   cursor: pointer;
   text-shadow: 0 3px 10px rgba(0, 0, 0, 0.5), 0 6px 20px rgba(0, 0, 0, 0.5);
@@ -260,9 +265,9 @@ li img {
 .projects {
   grid-area: 2/1/3/2;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
   grid-auto-rows: 250px;
-  gap: 24px;
+  gap: 32px;
   padding: 12px 24px;
 }
 
