--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,12 @@
 
 .header {
   grid-area: 1/2/2/4;
-  background-color: white;
+  background-color: var(--primary-background-color);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 4px 10px rgba(0, 0, 0, 0.2);
   z-index: 1;
   display: grid;
   grid-template: 65px 115px / 2fr 1fr;
+  color: var(--primary-text-color);
 }
 
 .search {
@@ -43,13 +44,13 @@
   padding: 6px;
   padding-left: 12px;
   border: none;
-  background-color: rgba(111, 137, 151, 0.2);
+  background-color: var(--searchbar-color);
   border-radius: 20px;
   font-size: 1.2rem;
 }
 
 .search input:hover {
-  background-color: rgba(111, 137, 151, 0.35);
+  background-color: var(--searchbar-hover);
 }
 
 .search input:focus {
@@ -63,6 +64,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  filter: var(--color-change-filter);
 }
 
 .search label:hover,
@@ -105,6 +107,10 @@ label img {
 
 .profile-icons p {
   font-size: 1.2rem;
+}
+
+.profile-icon {
+  filter: var(--color-change-filter);
 }
 
 .user-info {
@@ -258,6 +264,7 @@ li img {
   background-color: #e2e8f0;
   display: grid;
   grid-template: 80px 1fr / 1fr 380px;
+  color: var(--primary-text-color);
 }
 
 .projects-label {
@@ -278,7 +285,7 @@ li img {
 }
 
 .projects-item {
-  background: linear-gradient(to right, #e9573e, #e9573e 12px, white 12px);
+  background: linear-gradient(to right, #e9573e, #e9573e 12px, var(--primary-background-color) 12px);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -339,7 +346,7 @@ li img {
 
 .announcements,
 .trending {
-  background-color: white;
+  background-color: var(--primary-background-color);
   padding: 36px;
   border-radius: 12px;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
