Update HR line color in dark mode

--- a/css/dark.css
+++ b/css/dark.css
@@ -6,4 +6,5 @@
   --searchbar-hover: rgba(227, 234, 238, 0.35);
   --content-background-color: #707379;
   --secondary-text-color: rgba(255, 255, 255, 0.7);
+  --hr-color: rgba(255, 255, 255, 0.2);
 }
