--- a/css/light.css
+++ b/css/light.css
@@ -6,4 +6,5 @@
   --searchbar-hover: rgba(111, 137, 151, 0.35);
   --content-background-color: #e2e8f0;
   --secondary-text-color: rgba(0, 0, 0, 0.7);
+  --hr-color: rgba(0, 0, 0, 0.2);
 }
